[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/TeaBoxFront.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/TeaBoxBack.png" type="Texture" id=7]
[ext_resource path="res://scenes/BoxOfTea/BoxOfTea.gd" type="Script" id=8]
[ext_resource path="res://scenes/BoxOfTea/TeaBagWrapper.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/BoxOfTea/TeaButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/teas/BlueberryTea.tres" type="Resource" id=11]
[ext_resource path="res://resources/teas/ChamomileTea.tres" type="Resource" id=12]
[ext_resource path="res://resources/teas/ElderberryTea.tres" type="Resource" id=13]
[ext_resource path="res://resources/teas/RoseTea.tres" type="Resource" id=14]
[ext_resource path="res://resources/teas/MintTea.tres" type="Resource" id=15]

[node name="BoxOfTea" type="Node2D"]
position = Vector2( 320, 128 )
script = ExtResource( 8 )

[node name="TeaBoxBack" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="BlueberryTeaBagWrapper" parent="." instance=ExtResource( 9 )]
position = Vector2( -180, 13 )
tea = ExtResource( 11 )

[node name="MintTeaBagWrapper" parent="." instance=ExtResource( 9 )]
position = Vector2( -80, 13 )
tea = ExtResource( 15 )

[node name="ChamomileTeaBagWrapper" parent="." instance=ExtResource( 9 )]
position = Vector2( 21, 13 )
tea = ExtResource( 12 )

[node name="RoseTeaBagWrapper" parent="." instance=ExtResource( 9 )]
position = Vector2( 120, 13 )
tea = ExtResource( 14 )

[node name="ElderberryTeaBagWrapper" parent="." instance=ExtResource( 9 )]
position = Vector2( 220, 13 )
tea = ExtResource( 13 )

[node name="TeaBoxFront" type="Sprite" parent="."]
position = Vector2( 0, 12 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -74.0
margin_right = 268.0
margin_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BlueberryTeaButton" parent="Control/HBoxContainer" instance=ExtResource( 10 )]
disabled = true
tea = ExtResource( 11 )

[node name="MintTeaButton" parent="Control/HBoxContainer" instance=ExtResource( 10 )]
margin_left = 100.0
margin_right = 196.0
disabled = true
tea = ExtResource( 15 )

[node name="ChamomileTeaButton" parent="Control/HBoxContainer" instance=ExtResource( 10 )]
margin_left = 200.0
margin_right = 296.0
disabled = true
tea = ExtResource( 12 )

[node name="RoseTeaButton" parent="Control/HBoxContainer" instance=ExtResource( 10 )]
margin_left = 300.0
margin_right = 396.0
disabled = true
tea = ExtResource( 14 )

[node name="ElderberryTeaButton" parent="Control/HBoxContainer" instance=ExtResource( 10 )]
margin_left = 400.0
margin_right = 496.0
disabled = true
tea = ExtResource( 13 )

[connection signal="tea_hovered" from="Control/HBoxContainer/BlueberryTeaButton" to="." method="_on_TeaButton_tea_hovered"]
[connection signal="tea_selected" from="Control/HBoxContainer/BlueberryTeaButton" to="." method="_on_TeaButton_tea_selected"]
[connection signal="tea_hovered" from="Control/HBoxContainer/MintTeaButton" to="." method="_on_TeaButton_tea_hovered"]
[connection signal="tea_selected" from="Control/HBoxContainer/MintTeaButton" to="." method="_on_TeaButton_tea_selected"]
[connection signal="tea_hovered" from="Control/HBoxContainer/ChamomileTeaButton" to="." method="_on_TeaButton_tea_hovered"]
[connection signal="tea_selected" from="Control/HBoxContainer/ChamomileTeaButton" to="." method="_on_TeaButton_tea_selected"]
[connection signal="tea_hovered" from="Control/HBoxContainer/RoseTeaButton" to="." method="_on_TeaButton_tea_hovered"]
[connection signal="tea_selected" from="Control/HBoxContainer/RoseTeaButton" to="." method="_on_TeaButton_tea_selected"]
[connection signal="tea_hovered" from="Control/HBoxContainer/ElderberryTeaButton" to="." method="_on_TeaButton_tea_hovered"]
[connection signal="tea_selected" from="Control/HBoxContainer/ElderberryTeaButton" to="." method="_on_TeaButton_tea_selected"]
